fix the left alignment for profile-info

--- a/02-Web Portfolio/style.css
+++ b/02-Web Portfolio/style.css
@@ -333,7 +333,7 @@ strong, b {
     }
 
     .fixed-left .profile-info {
-        margin-left: 10%;
+        /* margin-left: 10%; */
         margin-top: 10%;
     }
 
@@ -394,7 +394,7 @@ strong, b {
     }
 
     .fixed-left .profile-info {
-        margin-left: 10%;
+        /* margin-left: 10%; */
         margin-top: 10%;
     }
 
